--- a/MainPage.html
+++ b/MainPage.html
@@ -5,10 +5,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>MainPageHome</title>
         <link rel="stylesheet" type="text/css" href="Mainpage.css">
+        <link href="https://fonts.googleapis.com/css2?family=Barriecito&family=Creepster&display=swap" rel="stylesheet">
     </head>
     <body>
-        <main>
-            
-        </main>
+        <header>
+            <a href="MainPage.html"><div class="home-button">Home</div></a>
+            <a href="osrs-page.html"><div class="osrs-button">OSRS Starter Guide</div></a>
+            <a href="rs3-page.html"><div class="runescape3-button">Rs3 Starter Guide</div></a>
+        </header>
+        <div class="leftbanner"><img src="osrs-img-copy1-left.png" min-width="1025px"></div>
+            <form>
+                <h1 class="openertext">Old School Runescape or Runescape 3?</h1>
+                <fieldset class="field1">
+                    <h2>Comparing Old School Runescape and Runescape 3</h2>
+                    <h3>Old school Runescape</h3>
+                    <ul>
+                        <li>Basic combat system</li>
+                        <li>Slower paced gameplay</li>
+                        <li>Minigames</li>
+                        <li>Social activities</li>
+                        <li>Player vs Player combat</li>
+                        <li>No Microtransactions, except bonds</li>
+                        <li>Is a solid game and the developers would never dare ruin because it has such a hardcore playerbase that would be gone in the blink of an eye</li>
+                    </ul>
+                    
+                </fieldset>
+                <fieldset class="field2"></fieldset>
+                <fieldset class="field3"></fieldset>
+            </form>
+           <div class="rightbanner"><img src="osrs-img-copy2-left.png" min-width="1025px"></div>
     </body>
 </html>
