--- a/osrs-page.html
+++ b/osrs-page.html
@@ -15,7 +15,10 @@
         </header>
         <form>
             <fieldset class="field1-1">
-                <h1>This guide is currently in progress!</h1>
+                <h1>Old School RuneScape starter guide</h1>
+                <h2>This guide takes place after Tutorial Island</h2>
+                <h3>So you've made it to lumbridge and have no idea what to do?</h3>
+                <p></p>
             </fieldset>
             <fieldset class="field2-2"></fieldset>
             <fieldset class="field3-3"></fieldset>
